# Fractalium

./: .gitignore  CMakeLists.txt  README.md  main.cpp  script.py  script.sh
.github/workflows/: cmake-multi-platform.yml
documentation/: Doxyfile
src/: Color.hpp  Complex.cpp  Complex.hpp  Contantes.hpp  Double.hpp  Fractal.cpp  Fractal.hpp  FractalWidget.cpp  FractalWidget.hpp  History.hpp  Image.cpp  Image.hpp  IterationDialog.cpp  IterationDialog.hpp  MPI.cpp  MPI.hpp  ResizeDialog.cpp  ResizeDialog.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SnapshotDialog.cpp  SnapshotDialog.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp
